--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,3 @@
 <resources>
-    <string name="app_name">Tamagotchi</string>
-    <string name="start_play">PLAY</string>
-    <string name="start_settings">SETTINGS</string>
-    <string name="start_logo">TAMAGOTCHI</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_name">I Still dont know</string>
 </resources>
